--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,37 +1,51 @@
-#c-wheel_menu-spinner{
-	position:fixed;
-	top:0px;
-	left:0px;
-	width:0px;
-	height:0px;
-	background:rgba(228,236,239,0.95);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-weight: 100;
-	color: #535353;
-	font-size: 60px;
-	overflow:hidden
+#c-wheel_menu-spinner {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 0px;
+    height: 0px;
+    background: rgba(228, 236, 239, 0.95);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 100;
+    color: #535353;
+    font-size: 60px;
+    overflow: hidden
 }
 
-#c-wheel_menu-spinner.active{
-	width:100%;
-	height:100%;
+#c-wheel_menu-spinner.active {
+    width: 100%;
+    height: 100%;
 }
 
-#c-wheel_menu-spinner i.fa.fa-circle-o-notch{
-	opacity:.5;
-	font-family: mfly-webfont!important;
+#c-wheel_menu-spinner i.fa.fa-circle-o-notch {
+    opacity: .5;
+    font-family: mfly-webfont!important;
 }
 
-#c-wheel_menu-spinner i.fa.fa-circle-o-notch:before{
-	content: "\e906";
+#c-wheel_menu-spinner i.fa.fa-circle-o-notch:before {
+    content: "\e906";
 }
 
-@font-face{
-	font-family:mfly-webfont;
-	src:url(fonts/mfly-webfont.eot?u1qnn4);
-	src:url(fonts/mfly-webfont.eot?u1qnn4#iefix) format('embedded-opentype'),url(fonts/mfly-webfont.ttf?u1qnn4) format('truetype'),url(fonts/mfly-webfont.woff?u1qnn4) format('woff'),url(fonts/mfly-webfont.svg?u1qnn4#mfly-webfont) format('svg');
-	font-weight:400;
-	font-style:normal
+@font-face {
+    font-family: mfly-webfont;
+    src: url(fonts/mfly-webfont.eot?u1qnn4);
+    src: url(fonts/mfly-webfont.eot?u1qnn4#iefix) format('embedded-opentype'), url(fonts/mfly-webfont.ttf?u1qnn4) format('truetype'), url(fonts/mfly-webfont.woff?u1qnn4) format('woff'), url(fonts/mfly-webfont.svg?u1qnn4#mfly-webfont) format('svg');
+    font-weight: 400;
+    font-style: normal
 }
+
+// #g_element_1479452730367_cktgc>g,
+// #g_element_1479452730382_1p86u>g,
+// #g_element_1479452730393_76pty>g,
+// #g_element_1479452730399_0l8tt {
+//     transition: transform .2s;
+//     transform-origin: 50%;
+// }
+// #g_element_1479452730367_cktgc>g:hover,
+// #g_element_1479452730382_1p86u>g:hover,
+// #g_element_1479452730393_76pty>g:hover,
+// #g_element_1479452730399_0l8tt:hover {
+//     transform: scale(1.1)
+// }
